--- a/Dockerfile.oc141
+++ b/Dockerfile.oc141
@@ -13,7 +13,10 @@ COPY etc/policy.json /etc/containers/
 COPY ./skopeo /usr/bin 
 COPY ./kompose /usr/bin 
 
-RUN chown -R 1001:0 /etc/containers $HOME /usr/bin/skopeo /usr/bin/kompose && \
-    chmod -R g+rw /etc/containers $HOME /usr/bin/skopeo /usr/bin/kompose
+RUN curl -L https://github.com/openshift/origin/releases/download/v1.4.1/openshift-origin-client-tools-v1.4.1-3f9807a-linux-64bit.tar.gz | tar -C /tmp/ -zxvf - && \
+    mv /tmp/openshift-origin-client-tools-*/oc /usr/bin/oc && \
+    rm -rf /tmp/openshift-origin-client-tools-* && \
+    chown -R 1001:0 /etc/containers $HOME /usr/bin/skopeo /usr/bin/kompose /usr/bin/oc && \
+    chmod -R g+rw /etc/containers $HOME /usr/bin/skopeo /usr/bin/kompose /usr/bin/oc
 
 USER 1001
