--- a/Dockerfile.oc150
+++ b/Dockerfile.oc150
@@ -13,7 +13,8 @@ COPY etc/policy.json /etc/containers/
 COPY ./skopeo /usr/bin 
 COPY ./kompose /usr/bin 
 
-RUN curl -L https://github.com/openshift/origin/releases/download/v1.5.0/openshift-origin-client-tools-v1.5.0-031cbe4-linux-64bit.tar.gz | tar -C /tmp/ -zxvf - && \
+RUN yum update -y && yum install nc -y && yum clean up && \
+    curl -L https://github.com/openshift/origin/releases/download/v1.5.0/openshift-origin-client-tools-v1.5.0-031cbe4-linux-64bit.tar.gz | tar -C /tmp/ -zxvf - && \
     mv /tmp/openshift-origin-client-tools-*/oc /usr/bin/oc && \
     rm -rf /tmp/openshift-origin-client-tools-* && \
     chown -R 1001:0 /etc/containers $HOME /usr/bin/skopeo /usr/bin/kompose /usr/bin/oc && \
